# Tech-Wizards

./: .gitignore  LICENSE  README.md
CS-A250-Capstone-Project/: CMakeLists.txt  DataLoader.cpp  DataLoader.h  Formatter.h  Interface.cpp  Interface.h  Main.cpp  Makefile  Participant.h  ParticipantList.cpp  ParticipantList.h  RegistrationManager.h  Workshop.h  WorkshopList.h
